@@ -1,3 +1,6 @@
+2010-12-01 Franz Holzinger  <franz@ttproducts.de>
+	* undo the change to disable a user confirmation when the admin receives the email to review SETFIXED_REVIEW
+
 2010-11-29 Stanislas Rolland  <typo3@sjbr.ca>
 	* Restored missing entry in Changelog
 	* Fixed bug #11149(Forge): Extension Manager issues warning regarding class tx_srfeuserregister_lib_conf
@@ -9,6 +12,7 @@
 	* new feature: use v_dear_male or v_dear_female instead of v_dear if a gender has been entered
 	* complete the contributor list in contributors.txt
 	* fix bug 16132: image is missing at CREATE and INVITE
+	* allow to set attributes to the buttons
 
 2010-10-21 Franz Holzinger  <franz@ttproducts.de>
 	* fix bug 15281: the authorization in the confirmation link did not work with multiple FE groups because the comma had been HTML encoded
